# crofiler

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
asylum/: Cargo.toml
asylum/src/: lib.rs  path.rs  sequence.rs
clang-time-trace/: Cargo.toml  README.md
clang-time-trace/src/: lib.rs  metadata.rs  path.rs  tree.rs
clang-time-trace/src/ctf/: mod.rs  stack.rs
clang-time-trace/src/ctf/events/: duration.rs  metadata.rs
clang-time-trace/src/stats/: activity.rs  global.rs  mod.rs
clang-time-trace/src/stats/activity/: argument.rs  mod.rs
cmakeperf/: Cargo.toml
cmakeperf/src/: commands.rs  lib.rs  measure.rs  output.rs
cmakeperf/src/measure/: main.rs  mod.rs  worker.rs
cmakeperf/tests/: measure.rs
cmakeperf/tests/measure/: fixture.rs  log.rs  main.rs
cpparser/: Cargo.toml  README.md
cpparser/benches/: anonymous.rs  entities.rs  functions.rs  names_atoms.rs  names_scopes.rs  names_unqualified.rs  operators_overloads.rs  operators_usage.rs  templates.rs  types.rs  types_declarators.rs  types_qualifiers.rs  types_specifiers.rs  types_specifiers_legacy.rs  values.rs  values_literals.rs
cpparser/src/: anonymous.rs  display.rs  functions.rs  lib.rs  templates.rs  utilities.rs
cpparser/src/interning/: mod.rs  recursion.rs  slice.rs
cpparser/src/names/: atoms.rs  mod.rs  scopes.rs  unqualified.rs
cpparser/src/operators/: mod.rs  overloads.rs  usage.rs
cpparser/src/subparsers/: anonymous.rs  functions.rs  mod.rs  templates.rs
cpparser/src/subparsers/names/: atoms.rs  scopes.rs  unqualified.rs
cpparser/src/subparsers/operators/: mod.rs  overloads.rs  usage.rs
cpparser/src/subparsers/types/: declarators.rs  mod.rs  qualifiers.rs
cpparser/src/subparsers/types/specifiers/: legacy.rs  mod.rs
cpparser/src/subparsers/values/: literals.rs  mod.rs
cpparser/src/types/: declarators.rs  mod.rs  qualifiers.rs
cpparser/src/types/specifiers/: legacy.rs  mod.rs
cpparser/src/values/: literals.rs  mod.rs
dispplay/: Cargo.toml  Config.md  Notes_dispplay.md
dispplay/src/: lib.rs
dispplay/src/entities/: mod.rs  path.rs
dispplay/src/entities/names/: atoms.rs  mod.rs
simpp/: Cargo.toml
simpp/src/: main.rs
src/: clang.rs  duration.rs  main.rs  metadata.rs  path.rs  profile.rs  trace.rs
src/cpp/: anonymous.rs  atom.rs  atoms.rs  functions.rs  id_expressions.rs  mod.rs  names.rs  operators.rs  templates.rs  types.rs  values.rs
src/cpp/types/: declarators.rs  mod.rs  qualifiers.rs  specifiers.rs
src/cpp/values/: literals.rs  mod.rs
src/display/: activity.rs  duration.rs  mod.rs  path.rs  stdio.rs
src/events/: duration.rs
src/parser/: mod.rs  stack.rs
src/parser/events/: duration.rs  metadata.rs
src/trace/: activities.rs  metadata.rs  mod.rs  stats.rs  tree.rs
src/trace/ctf/: mod.rs  stack.rs
src/trace/ctf/events/: duration.rs  metadata.rs
src/trace/parser/events/: duration.rs  metadata.rs  mod.rs
src/trace/stats/: activity.rs  global.rs  mod.rs
src/ui/: mod.rs  stdio.rs  tui.rs
src/ui/display/: activity.rs  duration.rs  metadata.rs  mod.rs  path.rs
src/ui/tui/: build.rs  create.rs  init.rs  mod.rs  names.rs  processing.rs  profile.rs  trace.rs
src/ui/tui/trace/: display.rs  load.rs  measure.rs  mod.rs
tests/: 7-GMSTests_main.json
