### Workspace-wide configuration ###

[workspace]
members = ["asylum", "clang-time-trace", "cmakeperf", "cpparser", "simpp"]

[workspace.package]
version = "3.0.1"
edition = "2021"
repository = "https://github.com/HadrienG2/crofiler"
rust-version = "1.72.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin"]
# The installers to generate for each app
installers = ["shell"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Config for "cargo release"
[workspace.metadata.release]
# Not ready to publish to crates.io yet
publish = false
# Everything shared a single version number
shared-version = true
tag-name = "v{{version}}"

[profile.test]
opt-level = 1

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.release]
debug = "line-tables-only"  # Needed for profiling

[profile.bench]
debug = "line-tables-only"  # Needed for profiling
codegen-units = 1  # Needed for inlining decision determinism

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

### Crofiler-specific configuration ###

[package]
name = "crofiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Display statistics on the usage of the C++ entity interners
#
# This can be used during development to adjust interner key sizes based on
# real-world workloads.
#
unstable_interner_stats = []

[dependencies]
# Used to decode clang output
clang-time-trace = { path = "clang-time-trace" }

# Used for CLI options
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Used to measure and process full-build profiles
cmakeperf = { path = "cmakeperf" }

# Used for TUI display
cursive = { version = "0.20", default-features = false, features = ["termion-backend"] }
cursive_table_view = "0.14"

# Saner floats, used to simplify TUI code
decorum = "0.3"

# Used for logging in stdio mode
env_logger = "0.10"

# Used for logging
log = "0.4"

# Used for logging in TUI mode
syslog = "6.1"

# Used for low-level terminal interaction, mostly TTY detection & teminal size
termion = "3.0"

# Used for typesetting hierarchical profiles in stdio mode
termtree = "0.4"

# Used to simplify error handling
thiserror = "1.0"

# Used to format ISO dates from clang Unix timestamps
time = "0.3"

# Used to find appropriate points for cutting Unicode strings
unicode-segmentation = "1.11"

# Used to evaluate terminal width of strings
unicode-width = "0.1"

# Used for cancellable wait on worker processes
wait-timeout = "0.2"

[dev-dependencies]
# Used to simplify tests
assert_matches = "1.5"
