[package]
name = "asylum"
version = "0.1.2"
edition = "2021"

[dependencies]
ahash = "0.8"
hashbrown = { version = "0.13", features = ["raw"] }
lasso = { version = "0.7", features = ["ahasher"] }
reffers = { version = "0.7", optional = true }
thiserror = "1.0"

[dev-dependencies]
maplit = "1.0"
more-asserts = "0.3"
pretty_assertions = "1.2"
