[package]
name = "asylum"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
hashbrown = { workspace = true, features = ["raw"] }
lasso = { workspace = true, features = ["ahasher"] }
reffers = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
more-asserts = { workspace = true }
pretty_assertions = { workspace = true }
