[package]
name = "clang-time-trace"
version = "0.1.2"
edition = "2021"

[dependencies]
cpp_demangle = "0.3"
cpparser = { path = "../cpparser" }
log = "0.4"
phf = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"
maplit = "1.0"
more-asserts = "0.3"
pretty_assertions = "1.2"
