[package]
name = "clang-time-trace"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpp_demangle = "0.4"
cpparser = { path = "../cpparser" }
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"
maplit = "1.0"
more-asserts = "0.3"
pretty_assertions = "1.2"
