[package]
name = "clang-time-trace"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpp_demangle = { workspace = true }
cpparser = { path = "../cpparser" }
log = { workspace = true }
phf = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
maplit = { workspace = true }
more-asserts = { workspace = true }
pretty_assertions = { workspace = true }
