[package]
name = "cmakeperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for communication with jobs during build profiling
atomic-wait = "1.1"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"

# Used to parse and produce full-build CSV profiles
csv = "1.1"

# Used to notify of unexpected clang output
log = "0.4"

# Used to compute relative paths
pathdiff = "0.2"

# Used to parse the CMake compilation database
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1"

# Used to monitor available RAM and command RAM usage during build profiling
sysinfo = { version = "0.26", default-features = false }

# Actually only used by tests and the "mock" test binary, but cannot be made a
# dev-dependency as cargo can't be told that "mock" is part of the test code.
tempfile = "3.3"

# Used to generate error types with reasonable boilerplate
thiserror = "1.0"

# Used to monitor and cancel build processes
wait-timeout = "0.2"

[dev-dependencies]
# Used to simplify tests
assert_matches = "1.5"

# Property-based testing
quickcheck = "1"
quickcheck_macros = "1"

# Temporary file management
fs-set-times = "0.18"

# Used for log analysis
once_cell = "1.17"
simplelog = "0.12"
