[package]
name = "cmakeperf"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.dist]
dist = false

[dependencies]
# Used for communication with jobs during build profiling
atomic-wait = { workspace = true }
crossbeam-deque = { workspace = true }
crossbeam-utils = { workspace = true }

# Used to parse and produce full-build CSV profiles
csv = { workspace = true }

# Used to notify of unexpected clang output
log = { workspace = true }

# Used to compute relative paths
pathdiff = { workspace = true }

# Used to parse the CMake compilation database
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }

# Used to monitor available RAM and command RAM usage during build profiling
sysinfo = { workspace = true, features = ["system"] }

# Actually only used by tests and the "mock" test binary, but cannot be made a
# dev-dependency as cargo can't be told that "mock" is part of the test code.
tempfile = { workspace = true }

# Used to generate error types with reasonable boilerplate
thiserror = { workspace = true }

# Used to monitor and cancel build processes
wait-timeout = { workspace = true }

[dev-dependencies]
# Used to simplify tests
assert_matches = { workspace = true }

# Property-based testing
proptest = { workspace = true }
proptest-derive = { workspace = true }

# Temporary file management
fs-set-times = { workspace = true }

# Used for log analysis
simplelog = { workspace = true, features = ["test"] }
