[package]
name = "cpparser"
version = "0.1.0"
edition = "2021"

[dependencies]
asylum = { path = "../asylum" }
nom = "7.1"
nom-supreme = "0.8"
unicode-xid = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.2"

# Benchmarking configuration
[lib]
bench = false
#
[[bench]]
name = "anonymous"
harness = false
[[bench]]
name = "names_atoms"
harness = false
[[bench]]
name = "names_scopes"
harness = false
[[bench]]
name = "names_unqualified"
harness = false
[[bench]]
name = "operators_overloads"
harness = false
[[bench]]
name = "operators_usage"
harness = false
[[bench]]
name = "types"
harness = false
[[bench]]
name = "types_declarators"
harness = false
[[bench]]
name = "types_qualifiers"
harness = false
[[bench]]
name = "types_specifiers"
harness = false
[[bench]]
name = "types_specifiers_legacy"
harness = false
[[bench]]
name = "values_literals"
harness = false
