[package]
name = "cpparser"
version = "0.1.0"
edition = "2021"

[dependencies]
asylum = { path = "../asylum", features = ["reffers"] }
nom = "7.1"
nom-supreme = "0.8"
reffers = "0.7"
thiserror = "1.0"
unicode-xid = { version = "0.2", optional = true }
unicode-width = "0.1"

[dev-dependencies]
assert_matches = "1.5"
criterion = { version = "0.4", default-features = false }
pretty_assertions = "1.2"

# Benchmarking configuration
[lib]
bench = false
#
[[bench]]
name = "anonymous"
harness = false
[[bench]]
name = "entities"
harness = false
[[bench]]
name = "functions"
harness = false
[[bench]]
name = "names_atoms"
harness = false
[[bench]]
name = "names_scopes"
harness = false
[[bench]]
name = "names_unqualified"
harness = false
[[bench]]
name = "operators_overloads"
harness = false
[[bench]]
name = "operators_usage"
harness = false
[[bench]]
name = "templates"
harness = false
[[bench]]
name = "types"
harness = false
[[bench]]
name = "types_declarators"
harness = false
[[bench]]
name = "types_qualifiers"
harness = false
[[bench]]
name = "types_specifiers"
harness = false
[[bench]]
name = "types_specifiers_legacy"
harness = false
[[bench]]
name = "values"
harness = false
[[bench]]
name = "values_literals"
harness = false
