[package]
name = "cpparser"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asylum = { path = "../asylum", features = ["reffers"] }
nom = { workspace = true }
nom-supreme = { workspace = true }
reffers = { workspace = true }
thiserror = { workspace = true }
unicode-xid = { workspace = true, optional = true }
unicode-width = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

# Benchmarking configuration
[lib]
bench = false
#
[[bench]]
name = "anonymous"
harness = false
[[bench]]
name = "entities"
harness = false
[[bench]]
name = "functions"
harness = false
[[bench]]
name = "names_atoms"
harness = false
[[bench]]
name = "names_scopes"
harness = false
[[bench]]
name = "names_unqualified"
harness = false
[[bench]]
name = "operators_overloads"
harness = false
[[bench]]
name = "operators_usage"
harness = false
[[bench]]
name = "templates"
harness = false
[[bench]]
name = "types"
harness = false
[[bench]]
name = "types_declarators"
harness = false
[[bench]]
name = "types_qualifiers"
harness = false
[[bench]]
name = "types_specifiers"
harness = false
[[bench]]
name = "types_specifiers_legacy"
harness = false
[[bench]]
name = "values"
harness = false
[[bench]]
name = "values_literals"
harness = false
