[package]
name = "dispplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# FIXME: Trim this dep list down
assert_matches = "1.5"
asylum = { path = "../asylum" }
cpparser = { path = "../cpparser" }
lasso = { version = "0.6", features = ["ahasher"] }
unicode-width = "0.1"